--- a/html_classComp.html
+++ b/html_classComp.html
@@ -1,43 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 개발용 -->
-    <script
-      crossorigin
-      src="https://unpkg.com/react@17/umd/react.development.js"
-    ></script>
-    <script
-      crossorigin
-      src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
-    ></script>
+    <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
 
     <!-- 배포용 -->
     <!-- <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script> -->
 
     <title>Document</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <!-- 결과 : <div id='root'><button>Like</button></div>-->
+</head>
+<body>
+    <div id="root"></div> <!-- 결과 : <div id='root'><button>Like</button></div>-->
     <script>
-      const e = React.createElement;
+        const e = React.createElement;
 
-      class LikeButton extends React.Component {
-        constructor(props) {
-          super(props);
-        }
+        class LikeButton extends React.Component {
+            constructor(props){
+                super(props);
+                this.state = {
+                    liked: false,
+                };
+            }
 
-        render() {
-          return e("button", null, "Like"); // <button>Like</button>
-        }
-      }
+            render() {
+                // <button onclick="{() => { console.log('click')}", type="submit">Like</button>
+                return e('button', { onClick: () => { this.setState({ liked: true }) }, type: 'submit'},
+                    this.state.liked === true ? 'Liked' : 'Like',
+                );
+            }
+        } 
     </script>
     <script>
-      ReactDOM.render(e(LikeButton), document.querySelector("#root"));
+        ReactDOM.render(e(LikeButton), document.querySelector('#root'));
     </script>
-  </body>
+</body>
 </html>
