--- a/gugudan_Comp.html
+++ b/gugudan_Comp.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>구구단</title>
     <!-- 개발용 -->
     <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
@@ -11,8 +12,6 @@
     <!-- 배포용 -->
     <!-- <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script> -->
-
-    <title>Document</title>
 </head>
 <body>
     <div id="root"></div> <!-- 결과 : <div id='root'><button>Like</button></div>-->
@@ -20,6 +19,7 @@
         class GuGuDan extends React.Component {
             constructor(props){
                 super(props);
+                // 변할것들을 state로 만듬
                 this.state = {
                   first: Math.ceil(Math.random() * 9),
                   second: Math.ceil(Math.random() * 9),
@@ -27,16 +27,47 @@
                   result: '',
                 };
             }
+
+            onSubmit = (e) => {
+                e.preventDefault();
+                if(parseInt(this.state.value) === this.state.first * this.state.second){
+                    this.setState((prevState) => {
+                        return {
+                            result: '정답 : ' + prevState.value,
+                            first: Math.ceil(Math.random() * 9),
+                            second: Math.ceil(Math.random() * 9),
+                            value: '',
+                        };
+                    });
+                    this.input.focus();
+                } else {
+                    this.setState({
+                        result: '땡',
+                        value: '',
+                    });
+                    this.input.focus();
+                }
+            };
+
+            onChange = (e) => {
+                this.setState({ value: e.target.value });
+            };
+
+            input;
+
+            onRef = (a) => { this.input = a; };
+
+            // 컨텐츠
             render(){
                 return (
-                    <div>
+                    <>
                         <div>{this.state.first} 곱하기 {this.state.second} 는?</div>
-                        <form>
-                            <input type="number" value={this.state.value} />
-                            <button>입력</button>
+                        <form onSubmit={this.onSubmit}>
+                            <input ref={this.onRef} type="number" value={this.state.value} onChange={this.onChange} />
+                            <button type="submit">입력!</button>
                         </form>
                         <div>{this.state.result}</div>
-                    </div>
+                    </>
                 );
             }
         }
